:sparkles: Proceeding to convolution theorem part.
:bento: Adding figures of diffraction patterns.
:see_no_evil: Updating figures to be kept.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,36 @@
 !Data/GMR-Plot-04-01-excel.png
 !Data/GMR-Plot-04-02-excel.png
 !Data/GMR-Plot-05-excel.png
+!Data/001/
+!Data/001/10_per_mm-baseline.png
+!Data/001/10_per_mm-0_pm1_only.png
+!Data/001/10_per_mm-0_pm2_only.png
+!Data/001/10_per_mm-baseline.png
+!Data/001/10_per_mm-0_pm1_only.png
+!Data/001/10_per_mm-0_pm2_only.png
+!Data/001/10_per_mm-baseline.png
+!Data/001/10_per_mm-0_only.png
+!Data/001/10_per_mm-0_excluded.png
+!Data/002/
+!Data/002/2dim_baseline_02.png
+!Data/002/2dim_horizontal.png
+!Data/002/2dim_vertical.png
+!Data/002/2dim_plus45.png
+!Data/002/2dim_minus45.png
+!Data/003-pattern/
+!Data/003-pattern/conv_base_1.png
+!Data/003-pattern/conv_base_2.png
+!Data/003-pattern/conv_344_164.png
+!Data/003-pattern/conv_344_164.png
+!Data/003-pattern/conv_014_164.png
+!Data/003-pattern/conv_029_164.png
+!Data/003-pattern/conv_044_164.png
+!Data/003-pattern/conv_074_164.png
+!Data/003-pattern/conv_344_164.png
+!Data/003-pattern/conv_344_194.png
+!Data/003-pattern/conv_344_209.png
+!Data/003-pattern/conv_344_224.png
+!Data/003-pattern/conv_344_254.png
 !.github/
 !.github/workflows/
 !.github/workflows/build.yml
