:sparkles: Differential part ready.

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@
 !Data/003-pattern/conv_344_209.png
 !Data/003-pattern/conv_344_224.png
 !Data/003-pattern/conv_344_254.png
+!Data/003-pattern/conv_014_194.png
+!Data/003-pattern/conv_029_209.png
+!Data/003-pattern/conv_044_224.png
+!Data/003-pattern/differential.png
 !.github/
 !.github/workflows/
 !.github/workflows/build.yml
