Theta modulation done.

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,8 @@
 !Data/003-pattern/conv_029_209.png
 !Data/003-pattern/conv_044_224.png
 !Data/003-pattern/differential.png
+!Data/pseudo_colour.png
+!Data/theta-modulation_diff_pattern.png
 !.github/
 !.github/workflows/
 !.github/workflows/build.yml
