--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 !Report/report.tex
 !Report/thuemp.cls
 !Report/report.bib
+!Prep/
+!Prep/prep-slides.tex
+!Prep/theta-plane.png
+!Prep/spatial-filter.png
+!Prep/4F-schematic.png
+!Prep/DPU-framework-Dai.png
 !Data/
 !Data/GMR-Plot-01-01-excel.png
 !Data/GMR-Plot-01-02-excel.png
