:construction: Pending final compilation checks

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 !Prep/theta-plane.png
 !Prep/spatial-filter.png
 !Prep/4F-schematic.png
+!Prep/4F-system.png
 !Prep/DPU-framework-Dai.png
 !Data/
 !Data/GMR-Plot-01-01-excel.png
