:zap: Speed up compilation with pdf figures
:construction: To clean .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,23 @@
 !Data/001/10_per_mm-0_pm1_pm2_only.png
 !Data/001/10_per_mm-0_pm2_only.png
 !Data/001/10_per_mm-baseline.png
+!Data/001/10_per_mm-0_excluded.pdf
+!Data/001/10_per_mm-0_only.pdf
+!Data/001/10_per_mm-0_pm1_only.pdf
+!Data/001/10_per_mm-0_pm1_pm2_only.pdf
+!Data/001/10_per_mm-0_pm2_only.pdf
+!Data/001/10_per_mm-baseline.pdf
 !Data/002/
 !Data/002/2dim_baseline_02.png
 !Data/002/2dim_horizontal.png
 !Data/002/2dim_minus45.png
 !Data/002/2dim_plus45.png
 !Data/002/2dim_vertical.png
+!Data/002/2dim_baseline_02.pdf
+!Data/002/2dim_horizontal.pdf
+!Data/002/2dim_minus45.pdf
+!Data/002/2dim_plus45.pdf
+!Data/002/2dim_vertical.pdf
 !Data/003-pattern/
 !Data/003-pattern/conv_014_164.png
 !Data/003-pattern/conv_014_194.png
@@ -32,6 +43,21 @@
 !Data/003-pattern/conv_base_1.png
 !Data/003-pattern/conv_base_2.png
 !Data/003-pattern/differential.png
+!Data/003-pattern/conv_014_164.pdf
+!Data/003-pattern/conv_014_194.pdf
+!Data/003-pattern/conv_029_164.pdf
+!Data/003-pattern/conv_029_209.pdf
+!Data/003-pattern/conv_044_164.pdf
+!Data/003-pattern/conv_044_224.pdf
+!Data/003-pattern/conv_074_164.pdf
+!Data/003-pattern/conv_344_164.pdf
+!Data/003-pattern/conv_344_194.pdf
+!Data/003-pattern/conv_344_209.pdf
+!Data/003-pattern/conv_344_224.pdf
+!Data/003-pattern/conv_344_254.pdf
+!Data/003-pattern/conv_base_1.pdf
+!Data/003-pattern/conv_base_2.pdf
+!Data/003-pattern/differential.pdf
 !Data/GMR-Plot-01-01-excel.png
 !Data/GMR-Plot-01-02-excel.png
 !Data/GMR-Plot-02-excel.png
@@ -40,6 +66,9 @@
 !Data/GMR-Plot-05-excel.png
 !Data/pseudo_colour.png
 !Data/theta-modulation_diff_pattern.png
+!Data/005-theta/
+!Data/005-theta/pseudo_colour.pdf
+!Data/005-theta/theta-modulation_diff_pattern.pdf
 !Makefile
 !Prep/
 !Prep/4F-schematic.png
